--- a/landing_page/templates/index.html
+++ b/landing_page/templates/index.html
@@ -61,18 +61,7 @@
 	</head>
 	<body>
 	<div class="wrapper">
-		<header>
-			<h1><a href="/">Avanti Interiors</a></h1>
-			<p>
-				Phone: 07738 628255<br>
-				Email: info@avantiinteriors.co.uk
-			</p>
-	    <ul>
-	      <li><a href="partitioning">Office Partitioning</a></li>
-	      <li><a href="ceilings">Suspended Ceilings</a></li>
-	      <li><a href="other">Other Services</a></li>
-	    </ul>
-		</header>
+		{% include 'header.html' %}
 		<div id="slides">
 		   <img src="{% static 'images/1.jpg' %}">
 		   <img src="http://placehold.it/940x528">
@@ -87,9 +76,7 @@
 			</p>	
 			</div>
 	</div>
-	<footer>
-    <p>Avanti Interiors &copy; 2014</p>
-  </footer>
+	{% include 'footer.html' %}
 </body>
 
 </HTML>
