--- a/landing_page/templates/partitioning.html
+++ b/landing_page/templates/partitioning.html
@@ -13,18 +13,10 @@
 	</head>
 	<body>
 	<div class="wrapper">
-	<header>
-		<h1><a href="/">Avanti Interiors</a></h1>
-		<p>
-			Phone: 07738 628255<br>
-			Email: info@avantiinteriors.co.uk
-		</p>
-    <ul>
-      <li id="active"><a href="partitioning">Office Partitioning</a></li>
-      <li><a href="ceilings">Suspended Ceilings</a></li>
-      <li><a href="other">Other Services</a></li>
-    </ul>
-	</header>
+	{% include 'header.html' %}
+	<script>
+		document.getElementById('partitioning').id = "active";
+	</script>
 	<div id="infoBox1" class="infoBox">
 		<h2>Office Partitioning</h2>
 		<p>
