--- a/landing_page/templates/other.html
+++ b/landing_page/templates/other.html
@@ -67,18 +67,10 @@
 	</style>
 	<body>
 	<div class="wrapper">
-	<header>
-		<h1><a href="/">Avanti Interiors</a></h1>
-		<p>
-			Phone: 07738 628255<br>
-			Email: info@avantiinteriors.co.uk
-		</p>
-    <ul>
-      <li><a href="partitioning">Office Partitioning</a></li>
-      <li><a href="ceilings">Suspended Ceilings</a></li>
-      <li id="active"><a href="other">Other Services</a></li>
-    </ul>
-	</header>
+	{% include 'header.html' %}
+	<script>
+		document.getElementById('other').id = "active";
+	</script>
 	<div class="infoBox" id="drylining">
 		<h2>Drylining</h2>
 		<p>Proin cursus, turpis vitae malesuada tempor, quam sapien auctor ipsum, non iaculis sem ex nec dui. Nullam dolor sapien, sollicitudin sed purus sit amet, elementum iaculis purus. Etiam vulputate metus id ligula accumsan varius. Praesent semper sit amet diam quis lobortis. Sed sit amet pharetra libero. Curabitur aliquam hendrerit iaculis. Integer at dui interdum, egestas risus ac, venenatis nisi. Fusce et justo vel tellus consectetur facilisis sed tincidunt lorem. Donec eget faucibus nibh. Cras vel velit vestibulum, convallis tortor eget, suscipit diam. Vivamus rutrum, nulla eu luctus pretium, nisl tortor viverra neque, faucibus feugiat nulla erat vel eros. Nulla facilisi. Etiam sed mi diam. Aliquam tincidunt vulputate turpis, ut mattis sem pharetra vitae.</p>
