--- a/landing_page/templates/other.html
+++ b/landing_page/templates/other.html
@@ -77,7 +77,7 @@
 	</div>
 	<div class="infoBox" id="mezzanine">
 		<h2>Mezzanine Floors</h2>
-		<p>Proin cursus, turpis vitae malesuada tempor, quam sapien auctor ipsum, non iaculis sem ex nec dui. Nullam dolor sapien, sollicitudin sed purus sit amet, elementum iaculis purus. Etiam vulputate metus id ligula accumsan varius. Praesent semper sit amet diam quis lobortis. Sed sit amet pharetra libero. Curabitur aliquam hendrerit iaculis. Integer at dui interdum, egestas risus ac, venenatis nisi. Fusce et justo vel tellus consectetur facilisis sed tincidunt lorem. Donec eget faucibus nibh. Cras vel velit vestibulum, convallis tortor eget, suscipit diam. Vivamus rutrum, nulla eu luctus pretium, nisl tortor viverra neque, faucibus feugiat nulla erat vel eros. Nulla facilisi. Etiam sed mi diam. Aliquam tincidunt vulputate turpis, ut mattis sem pharetra vitae.</p>
+		<p>If you feel you are outgrowing your office or warehouse space, there is a cheaper option than moving. Installing a new mezzanine floor can almost double your floor area at minimal cost. Avanti can assist you in the lay-out and design of a mezzanine floor to suit your needs.A mezzanine floor can be installed in a matter of days.</p>
 	</div>
 	<div class="infoBox" id="flooring">
 		<h2>Flooring</h2>
@@ -85,20 +85,19 @@
 	</div>
 	<div class="infoBox" id="plumbing">
 		<h2>Plumbing</h2>
-		<p>Proin cursus, turpis vitae malesuada tempor, quam sapien auctor ipsum, non iaculis sem ex nec dui. Nullam dolor sapien, sollicitudin sed purus sit amet, elementum iaculis purus. Etiam vulputate metus id ligula accumsan varius. Praesent semper sit amet diam quis lobortis. Sed sit amet pharetra libero. Curabitur aliquam hendrerit iaculis. Integer at dui interdum, egestas risus ac, venenatis nisi. Fusce et justo vel tellus consectetur facilisis sed tincidunt lorem. Donec eget faucibus nibh. Cras vel velit vestibulum, convallis tortor eget, suscipit diam. Vivamus rutrum, nulla eu luctus pretium, nisl tortor viverra neque, faucibus feugiat nulla erat vel eros. Nulla facilisi. Etiam sed mi diam. Aliquam tincidunt vulputate turpis, ut mattis sem pharetra vitae.<br>
-		<br>Nullam varius diam in risus dignissim pellentesque. Vestibulum semper enim sed dignissim dapibus. Sed in justo nec risus tincidunt rutrum. Phasellus feugiat lorem libero, et finibus dui bibendum in. Donec lobortis, ligula id volutpat mattis, lacus augue lacinia lacus, a euismod augue ante nec neque. Nam vitae massa vehicula, consectetur ligula eget, sodales neque. In viverra efficitur sollicitudin. Suspendisse pulvinar tellus id urna venenatis elementum. Cras ut neque fringilla, aliquet nisl et, placerat odio. Integer fermentum, neque vel aliquam convallis, velit dui euismod magna, id facilisis leo erat id odio. Vestibulum viverra dolor quis placerat fringilla. Nullam at sagittis massa, ut imperdiet ante. Vivamus in porta elit, sit amet aliquet augue. Morbi laoreet magna vel tristique fermentum.</p>
+		<p>Avanti will provide a heating and plumbing service to meet your requirements. It maybe a kitchen, Toilets or heating. Our heating and Plumbing engineers are experienced, qualified tradesmen.</p>
 	</div>
 	<div class="infoBox" id="electrics">
 		<h2>Electrics and Data</h2>
-		<p>Proin cursus, turpis vitae malesuada tempor, quam sapien auctor ipsum, non iaculis sem ex nec dui. Nullam dolor sapien, sollicitudin sed purus sit amet, elementum iaculis purus. Etiam vulputate metus id ligula accumsan varius. Praesent semper sit amet diam quis lobortis. Sed sit amet pharetra libero. Curabitur aliquam hendrerit iaculis. Integer at dui interdum, egestas risus ac, venenatis nisi. Fusce et justo vel tellus consectetur facilisis sed tincidunt lorem. Donec eget faucibus nibh. Cras vel velit vestibulum, convallis tortor eget, suscipit diam. Vivamus rutrum, nulla eu luctus pretium, nisl tortor viverra neque, faucibus feugiat nulla erat vel eros. Nulla facilisi. Etiam sed mi diam. Aliquam tincidunt vulputate turpis, ut mattis sem pharetra vitae.</p>
+		<p>Avanti can provide you with all your electrical and data needs, be it lighting,sockets, fire alarms to a new updated switchboard if necessary. Our electrical contractors are all qualified British tradesmen who are NICEIC,MCS and ECA approved. </p>
 	</div>
 	<div class="infoBox" id="office">
 		<h2>Office Furniture</h2>
-		<p>Proin cursus, turpis vitae malesuada tempor, quam sapien auctor ipsum, non iaculis sem ex nec dui. Nullam dolor sapien, sollicitudin sed purus sit amet, elementum iaculis purus. Etiam vulputate metus id ligula accumsan varius. Praesent semper sit amet diam quis lobortis. Sed sit amet pharetra libero. Curabitur aliquam hendrerit iaculis. Integer at dui interdum, egestas risus ac, venenatis nisi. Fusce et justo vel tellus consectetur facilisis sed tincidunt lorem. Donec eget faucibus nibh. Cras vel velit vestibulum, convallis tortor eget, suscipit diam. Vivamus rutrum, nulla eu luctus pretium, nisl tortor viverra neque, faucibus feugiat nulla erat vel eros. Nulla facilisi. Etiam sed mi diam. Aliquam tincidunt vulputate turpis, ut mattis sem pharetra vitae.</p>
+		<p>Avanti can provide your company with a total or partial refurbishment of your office space. Sometimes when a company relinquishes it's office space,the landlord will require it to be re-instated to how the premises looked prior to your occupance. In some circumstances they may try to charge exorbitant rates for the work. Avanti are experienced in this area and can carry out the work at a fraction of the cost. We can assist you in the choice and the installation of new Discounted office furniture that fits your needs. </p>
 	</div>
 	<div class="infoBox" id="decoration">
 		<h2>Decoration</h2>
-		<p>Proin cursus, turpis vitae malesuada tempor, quam sapien auctor ipsum, non iaculis sem ex nec dui. Nullam dolor sapien, sollicitudin sed purus sit amet, elementum iaculis purus. Etiam vulputate metus id ligula accumsan varius. Praesent semper sit amet diam quis lobortis. Sed sit amet pharetra libero. Curabitur aliquam hendrerit iaculis. Integer at dui interdum, egestas risus ac, venenatis nisi. Fusce et justo vel tellus consectetur facilisis sed tincidunt lorem. Donec eget faucibus nibh. Cras vel velit vestibulum, convallis tortor eget, suscipit diam. Vivamus rutrum, nulla eu luctus pretium, nisl tortor viverra neque, faucibus feugiat nulla erat vel eros. Nulla facilisi. Etiam sed mi diam. Aliquam tincidunt vulputate turpis, ut mattis sem pharetra vitae.</p>
+		<p>Avanti only use top quality painters and decorators.So you can be rest assured of a perfect finish to your specifications.  </p>
 	</div>
 </div>
 	<footer>
