--- a/landing_page/templates/partitioning.html
+++ b/landing_page/templates/partitioning.html
@@ -20,9 +20,13 @@
 	<div id="infoBox1" class="infoBox">
 		<h2>Office Partitioning</h2>
 		<p>
-		Nullam a lorem nulla. Nulla ornare, massa id laoreet hendrerit, eros arcu lacinia nunc, porta fringilla magna magna ut felis. Sed ut facilisis justo. Phasellus auctor rhoncus lacus, at aliquet ligula finibus nec. Nunc feugiat pretium ipsum, a tristique eros elementum sed. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent blandit mollis imperdiet. In porttitor elementum ligula, nec malesuada tellus pharetra at. Mauris et vehicula quam. Aliquam viverra nulla ac luctus rhoncus. Praesent lacus dolor, euismod eget tristique eu, facilisis sed quam. Nunc fringilla fermentum magna a accumsan. Sed rutrum nisi in nisl congue, tempus commodo dui lacinia. Mauris placerat turpis egestas iaculis tincidunt.<br>
+		Avanti Interiors offers a wide range of partitioning to solve your office's need. Don't believe us? Give us a phone and we'll tell you how. <br>
 		<br>
-		Nulla at mi ante. Quisque lacinia, magna nec sagittis iaculis, mi dolor finibus augue, non lacinia sapien tellus sit amet dolor. Nunc lacinia eu risus eu commodo. Cras et tincidunt lacus. Fusce vestibulum iaculis nibh, dapibus fermentum erat sodales id. Nullam id arcu elit. Proin tristique mi justo. Integer viverra pretium congue. Sed et porta ex, eu maximus eros. Aenean vulputate euismod risus a congue.
+		We are experts in supplying and installing of all types of office and glass partition systems. Want to create a great environment where
+			everyone would love to work? Here at Avanti we are passionate about great design. We can sort you out with stylish and modern office
+			partitioning at your request. All of our projects are custom to suit your needs and we have years of experience which means we know how best to do it by you.
+		<br>
+
 		</p>
 	</div>
 	<img id="image1" src="{% static 'images/1.jpg' %}">
