Office Partitioning description update

--- a/landing_page/templates/partitioning.html
+++ b/landing_page/templates/partitioning.html
@@ -24,9 +24,10 @@
 		<br>
 		We are experts in supplying and installing of all types of office and glass partition systems. Want to create a great environment where
 			everyone would love to work? Here at Avanti we are passionate about great design. We can sort you out with stylish and modern office
-			partitioning at your request. All of our projects are custom to suit your needs and we have years of experience which means we know how best to do it by you.
+			partitioning at your request. All of our projects are custom to suit your needs and we have years of experience which means we know how best to do it by you.<br>
 		<br>
-
+		No matter the size or type of office we can fit it. We work with you to find the optimal solution so that your office can work how you like it. Your environment
+		 shapes you and we will give you the best environment.
 		</p>
 	</div>
 	<img id="image1" src="{% static 'images/1.jpg' %}">
