--- a/landing_page/templates/ceilings.html
+++ b/landing_page/templates/ceilings.html
@@ -18,9 +18,12 @@
 	<div id="infoBox1" class="infoBox">
 		<h2>Ceilings</h2>
 		<p>
-		Nullam a lorem nulla. Nulla ornare, massa id laoreet hendrerit, eros arcu lacinia nunc, porta fringilla magna magna ut felis. Sed ut facilisis justo. Phasellus auctor rhoncus lacus, at aliquet ligula finibus nec. Nunc feugiat pretium ipsum, a tristique eros elementum sed. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent blandit mollis imperdiet. In porttitor elementum ligula, nec malesuada tellus pharetra at. Mauris et vehicula quam. Aliquam viverra nulla ac luctus rhoncus. Praesent lacus dolor, euismod eget tristique eu, facilisis sed quam. Nunc fringilla fermentum magna a accumsan. Sed rutrum nisi in nisl congue, tempus commodo dui lacinia. Mauris placerat turpis egestas iaculis tincidunt.<br>
+		Thinking about getting a new ceiling? Are you trying to create a better environment for your or your employees? <br>
+		Or are you trying to move up in the world but the glass ceiling of bureaucracy is holding you back?<br>
 		<br>
-		Nulla at mi ante. Quisque lacinia, magna nec sagittis iaculis, mi dolor finibus augue, non lacinia sapien tellus sit amet dolor. Nunc lacinia eu risus eu commodo. Cras et tincidunt lacus. Fusce vestibulum iaculis nibh, dapibus fermentum erat sodales id. Nullam id arcu elit. Proin tristique mi justo. Integer viverra pretium congue. Sed et porta ex, eu maximus eros. Aenean vulputate euismod risus a congue.
+		Well unfortunately there is not much we can do about the later. ALthough if you are looking to create a successful environment, you need a successful ceiling.
+		At Avanti we will install fantastically designed ceilings tailored to your needs. We work with you to ensure you get what you want and nothing less, unlike that glass ceiling.
+		Our ceilings are proffesionally installed by tradesmen with years of experience. There are a solutions we can offer you, all you have to do is ask! So why not drop us an email
 		</p>
 	</div>
 	<img id="image1" src="{% static 'images/1.jpg' %}">
