--- a/landing_page/templates/ceilings.html
+++ b/landing_page/templates/ceilings.html
@@ -18,12 +18,15 @@
 	<div id="infoBox1" class="infoBox">
 		<h2>Ceilings</h2>
 		<p>
-		Thinking about getting a new ceiling? Are you trying to create a better environment for your or your employees? <br>
+		Thinking about getting a new ceiling? Are you trying to create a better environment for you and your employees? <br>
 		Or are you trying to move up in the world but the glass ceiling of bureaucracy is holding you back?<br>
 		<br>
-		Well unfortunately there is not much we can do about the later. ALthough if you are looking to create a successful environment, you need a successful ceiling.
+		Well unfortunately there is not much we can do about the later. Although if you are looking to create a successful environment, you need a successful ceiling.
 		At Avanti we will install fantastically designed ceilings tailored to your needs. We work with you to ensure you get what you want and nothing less, unlike that glass ceiling.
-		Our ceilings are proffesionally installed by tradesmen with years of experience. There are a solutions we can offer you, all you have to do is ask! So why not drop us an email
+		Our ceilings are proffesionally installed by tradesmen with years of experience. We are passionate about elegance and simplicity which we believe are the fundamentals of great design.
+		We want to create a ceiling for you which is beautiful, simple and does not get in your way.<br>
+		<br>
+		There are a solutions we can offer you, all you have to do is ask! So why not drop us an email
 		</p>
 	</div>
 	<img id="image1" src="{% static 'images/1.jpg' %}">
