--- a/Roland/static/css/header.css
+++ b/Roland/static/css/header.css
@@ -88,11 +88,12 @@
       height: 60px; /* '.push' must be the same height as 'footer' */
     }
     footer {
-      background-color:white;
+      background-color:rgb(240,240,240);
       text-align:center;
       width:100%;
       z-index:3;
       position:relative;
+			border-top:1px solid rgb(40,40,40);
     }
     footer p {
       color:rgb(50,50,50);
