--- a/Roland/static/css/header.css
+++ b/Roland/static/css/header.css
@@ -93,7 +93,7 @@
       width:100%;
       z-index:3;
       position:relative;
-			border-top:1px solid rgb(40,40,40);
+			border-top:1px solid white;
     }
     footer p {
       color:rgb(50,50,50);
