--- a/Roland/static/css/infoLayout.css
+++ b/Roland/static/css/infoLayout.css
@@ -16,6 +16,7 @@
 				top:60px;
 				text-align:justify;
 				color:rgb(50,50,50);
+				line-height:150%;
 			}
 			div#infoBox1 h2 {
 				font-family: 'Oswald', sans-serif;
