--- a/landing_page/templates/index.html
+++ b/landing_page/templates/index.html
@@ -8,8 +8,8 @@
     <link href="{% static 'css/slides.css'%}" rel='stylesheet' type='text/css'>
 		<title>Avanti Interiors</title>
 		<style>
-  
-  
+
+
 		div#about {
 			position:absolute;
 			/*background-color:#779ECB;*/
@@ -45,6 +45,7 @@
 			top:60px;
 			text-align:justify;
 			color:rgb(50,50,50);
+			line-height:150%;
 		}
 
 		</style>
@@ -72,8 +73,8 @@
 			<p>
 			At Avanti Interiors we specialise in office partitions and suspended ceilings. We can assist in your design and offer advice if required. We offer a complete service that can include mezzanine floors, air conditioning, heating and plumbing, electrics and data, decoration, flooring, fire proofing, soundproofing and insulation and office furniture. <br>
 			<br>
-			We have had many years experience working for many large companies to very small companies. All our contractors are bona fide, long established, qualified Tradesmen. 
-			</p>	
+			We have had many years experience working for many large companies to very small companies. All our contractors are bona fide, long established, qualified Tradesmen.
+			</p>
 			</div>
 	</div>
 	{% include 'footer.html' %}
