--- a/Roland/static/css/infoLayout.css
+++ b/Roland/static/css/infoLayout.css
@@ -5,6 +5,7 @@
 				width:25%;
 				left:5%;
 				overflow:hidden;
+				height:500px;
 			}
 			div.infoBox p {
 				font-family: 'Arimo', sans-serif;
