--- a/landing_page/templates/header.html
+++ b/landing_page/templates/header.html
@@ -1,7 +1,8 @@
 <header>
 	<h1><a href="/">Avanti Interiors</a></h1>
 	<p>
-		Phone: 07738 628255<br>
+		Roland Crayton: 07738 628255<br>
+		Tom Blake: 07572452100<br>
 		Email: info@avantiinteriors.co.uk
 	</p>
 <ul>
@@ -11,5 +12,5 @@
 </ul>
 <ul id="column2">
   	<li id="endorsements"><a href="endorsements">Endorsements</a></li>
-</ul>	
+</ul>
 </header>
