--- a/landing_page/templates/partitioning.html
+++ b/landing_page/templates/partitioning.html
@@ -22,9 +22,9 @@
 		<p>
 		Avanti Interiors offers a wide range of partitioning to solve your office's need. Don't believe us? Give us a phone and we'll tell you how. <br>
 		<br>
-		We are experts in supplying and installing of all types of office and glass partition systems. Want to create a great environment where
-			everyone would love to work? Here at Avanti we are passionate about great design. We can sort you out with stylish and modern office
-			partitioning at your request. All of our projects are custom to suit your needs and we have years of experience which means we know how best to do it by you.<br>
+		Avanti Interiors offer a wide range of partitioning to suit your office requirements.We are experts in the supply and installation
+		of all aspects of office partitioning to create a great working environment.We can create office partitions to suit any space size and to any size of budget.
+		 When you contact Avanti, we will provide you with provide you with someone with many years of hands on experience to assist you with your design. <br>
 		<br>
 		No matter the size or type of office we can fit it. We work with you to find the optimal solution so that your office can work how you like it. Your environment
 		 shapes you and we will give you the best environment.
