--- a/landing_page/templates/index.html
+++ b/landing_page/templates/index.html
@@ -65,7 +65,8 @@
 		{% include 'header.html' %}
 		<div id="slides">
 		   <img src="{% static 'images/1.jpg' %}">
-		   <img src="http://placehold.it/940x528">
+		   <img src="{% static 'images/82262.jpg' %}">
+			<img src="{% static 'images/element.jpg' %}">
 		</div>
 		<div id="about">
 			<img src="{% static 'images/multiple25.png' %}">
