--- a/landing_page/templates/index.html
+++ b/landing_page/templates/index.html
@@ -66,7 +66,8 @@
 		<div id="slides">
 		   <img src="{% static 'images/1.jpg' %}">
 		   <img src="{% static 'images/82262.jpg' %}">
-			<img src="{% static 'images/element.jpg' %}">
+			 <img src="{% static 'images/element.jpg' %}">
+			 <img src="{% static 'images/education-mezzanine-floors.jpeg' %}">
 		</div>
 		<div id="about">
 			<img src="{% static 'images/multiple25.png' %}">
