--- a/Roland/static/css/slides.css
+++ b/Roland/static/css/slides.css
@@ -28,6 +28,7 @@
       text-decoration: none;
       font-family: 'Arimo', sans-serif;
       z-index:10;
+			background-color:rgba(255,255,255,0.7);
     }
 
     #slides .slidesjs-previous {
