--- a/landing_page/templates/other.html
+++ b/landing_page/templates/other.html
@@ -17,6 +17,7 @@
 			top:60px;
 			text-align:justify;
 			color:rgb(50,50,50);
+			line-height:150%;
 		}
 		div.infoBox h2 {
 			font-family: 'Oswald', sans-serif;
@@ -30,7 +31,7 @@
 			height:300px;
 			overflow:hidden;
 			position:absolute;
-			top:450px;
+			top:350px;
 			z-index:1;
 			left:5%;
 		}
