--- a/landing_page/templates/other.html
+++ b/landing_page/templates/other.html
@@ -86,7 +86,12 @@
 	</div>
 	<div class="infoBox" id="plumbing">
 		<h2>Plumbing</h2>
-		<p>Avanti will provide a heating and plumbing service to meet your requirements. It maybe a kitchen, Toilets or heating. Our heating and Plumbing engineers are experienced, qualified tradesmen.</p>
+		<p>Avanti will provide a heating and plumbing service to meet your requirements.
+			It maybe a kitchen, Toilets or heating. Our heating and Plumbing engineers are
+			experienced, qualified tradesmen. We pride ourselves on expert work. We promise to
+			remedy any plumbing issue/upgrade you may have to give you the peace of mind you deserve.
+			There is no longer any need to have headaches over leaks and dodgy plumbing, Avanti has you
+			covered.</p>
 	</div>
 	<div class="infoBox" id="electrics">
 		<h2>Electrics and Data</h2>
