--- a/landing_page/templates/other.html
+++ b/landing_page/templates/other.html
@@ -43,18 +43,18 @@
 			left:auto;
 		}
 		div#electrics {
-			top:350px;
+			top:450px;
 			left:37.5%;
 			padding-bottom:50px;
 		}
-		div#office {
+		div#drylining {
 			right:5%;
 			left:auto;
-			top:150px;
+			top:450px;
 			padding-bottom:50px;
 		}
 		div#decoration {
-			top:350px;
+			top:450px;
 			padding-bottom:50px;
 		}
 		body,html {
