--- a/landing_page/templates/other.html
+++ b/landing_page/templates/other.html
@@ -72,7 +72,7 @@
 		<h2>Mezzanine Floors</h2>
 		<p>If you feel you are outgrowing your office or warehouse space, there is a cheaper option than moving. Installing a new mezzanine floor can almost double your floor area at minimal cost. Avanti can assist you in the lay-out and design of a mezzanine floor to suit your needs.A mezzanine floor can be installed in a matter of days.</p>
 	</div>
-	<div class="infoBox" id="flooring">
+	<div class="infoBox" id="plumbing">
 	<h2>Plumbing</h2>
 	<p>Avanti will provide a heating and plumbing service to meet your requirements.
 		It maybe a kitchen, Toilets or heating. Our heating and Plumbing engineers are
