--- a/landing_page/templates/partitioning.html
+++ b/landing_page/templates/partitioning.html
@@ -20,14 +20,13 @@
 	<div id="infoBox1" class="infoBox">
 		<h2>Office Partitioning</h2>
 		<p>
-		Avanti Interiors offers a wide range of partitioning to solve your office's need. Don't believe us? Give us a phone and we'll tell you how. <br>
-		<br>
+{# 		Avanti Interiors offers a wide range of partitioning to solve your office's need. Don't believe us? Give us a phone and we'll tell you how. <br>
+		<br> #}
 		Avanti Interiors offer a wide range of partitioning to suit your office requirements. We are experts in the supply and installation
 		of all aspects of office partitioning to create a great working environment. We can create office partitions to suit any space size and to any size of budget.
-		 When you contact Avanti, we will provide you with provide you with someone with many years of hands on experience to assist you with your design. <br>
+		 When you contact Avanti, we will provide you with someone with many years of hands on experience to assist you with your design. <br>
 		<br>
-		No matter the size or type of office we can fit it. We work with you to find the optimal solution so that your office can work how you like it. Your environment
-		 shapes you and we will give you the best environment.
+		No matter the size or type of office we can fit it. We work with you to find the best possible solution for your office needs.
 		</p>
 	</div>
 	<img id="image1" src="{% static 'images/1.jpg' %}">
