--- a/landing_page/templates/ceilings.html
+++ b/landing_page/templates/ceilings.html
@@ -18,15 +18,10 @@
 	<div id="infoBox1" class="infoBox">
 		<h2>Ceilings</h2>
 		<p>
-{# 		Thinking about having a new Suspended ceiling installed? Or maybe just replacing your old ceiling with new, more modern ceiling tiles to create a better environment for your company.
-		Avanti can install a suspended tailored to your needs,installed by professional tradesmen.<br>
-		<br> #}
-{# 		If you are looking to create a successful environment, you need a successful ceiling. #}
-		At Avanti we will install fantastically designed ceilings tailored to your needs. We work with you to ensure you get what you want and nothing less, unlike that glass ceiling.
-		Our ceilings are proffesionally installed by tradesmen with years of experience. We are passionate about elegance and simplicity which we believe are the fundamentals of great design.
-		We want to create a ceiling for you which is beautiful, simple and does not get in your way.<br>
+		At Avanti we will install ceilings tailored to your needs. We work with you to ensure you get what you want.
+		Our ceilings are professionally installed by tradesmen with years of experience.
 		<br>
-		There are a solutions we can offer you, all you have to do is ask! So why not drop us an email
+		There are solutions we can offer you. So why not drop us an email?
 		</p>
 	</div>
 	<img id="image1" src="{% static 'images/82265.jpg' %}">
