--- a/landing_page/templates/ceilings.html
+++ b/landing_page/templates/ceilings.html
@@ -19,7 +19,7 @@
 		<h2>Ceilings</h2>
 		<p>
 		At Avanti we will install ceilings tailored to your needs. We work with you to ensure you get what you want.
-		Our ceilings are professionally installed by tradesmen with years of experience.
+		Our ceilings are professionally installed by tradesmen with years of experience.<br>
 		<br>
 		There are solutions we can offer you. So why not drop us an email?
 		</p>
