--- a/landing_page/templates/other.html
+++ b/landing_page/templates/other.html
@@ -83,8 +83,8 @@
 		<p>Avanti can provide you with all your electrical and data needs, be it lighting,sockets, fire alarms to a new updated switchboard if necessary. Our electrical contractors are all qualified British tradesmen who are NICEIC,MCS and ECA approved. </p>
 	</div>
 	<div class="infoBox" id="office">
-		<h2>Office Furniture</h2>
-		<p>Avanti can provide your company with a total or partial refurbishment of your office space. Sometimes when a company relinquishes it's office space,the landlord will require it to be re-instated to how the premises looked prior to your occupance. In some circumstances they may try to charge exorbitant rates for the work. Avanti are experienced in this area and can carry out the work at a fraction of the cost. We can assist you in the choice and the installation of new Discounted office furniture that fits your needs. </p>
+		<h2>Office Refurbishment</h2>
+		<p>Avanti can provide your company with a total or partial refurbishment of your office space. Sometimes when a company relinquishes it's office space,the landlord will require it to be re-instated to how the premises looked prior to your occupance. In some circumstances they may try to charge exorbitant rates for the work. Avanti are experienced in this area and can carry out the work at a fraction of the cost. </p>
 	</div>
 	<div class="infoBox" id="decoration">
 		<h2>Decoration</h2>
