--- a/landing_page/templates/other.html
+++ b/landing_page/templates/other.html
@@ -67,20 +67,17 @@
 
 	<div class="infoBox" id="mezzanine">
 		<h2>Mezzanine Floors</h2>
-		<p>If you feel you are outgrowing your office or warehouse space, there is a cheaper option than moving. Installing a new mezzanine floor can almost double your floor area at minimal cost. Avanti can assist you in the lay-out and design of a mezzanine floor to suit your needs.A mezzanine floor can be installed in a matter of days.</p>
+		<p>If you feel you are outgrowing your office or warehouse space, there is a cheaper option than moving. Installing a new mezzanine floor can almost double your floor area at minimal cost. Avanti can assist you in the lay-out and design of a mezzanine floor to suit your needs. A mezzanine floor can be installed in a matter of days.</p>
 	</div>
 	<div class="infoBox" id="plumbing">
 	<h2>Plumbing</h2>
 	<p>Avanti will provide a heating and plumbing service to meet your requirements.
 		It maybe a kitchen, Toilets or heating. Our heating and Plumbing engineers are
-		experienced, qualified tradesmen. We pride ourselves on expert work. We promise to
-		remedy any plumbing issue/upgrade you may have to give you the peace of mind you deserve.
-		There is no longer any need to have headaches over leaks and dodgy plumbing, Avanti has you
-		covered.</p>
+		experienced, qualified tradesmen. We pride ourselves on expert work.</p>
 	</div>
 	<div class="infoBox" id="electrics">
 		<h2>Electrics and Data</h2>
-		<p>Avanti can provide you with all your electrical and data needs, be it lighting,sockets, fire alarms to a new updated switchboard if necessary. Our electrical contractors are all qualified British tradesmen who are NICEIC,MCS and ECA approved. </p>
+		<p>Avanti can provide you with all your electrical and data needs, be it lighting,sockets, fire alarms to a new updated switchboard if necessary. Our electrical contractors are all qualified British tradesmen who are NICEIC, MCS and ECA approved. </p>
 	</div>
 	<div class="infoBox" id="office">
 		<h2>Office Refurbishment</h2>
