--- a/landing_page/templates/other.html
+++ b/landing_page/templates/other.html
@@ -84,8 +84,8 @@
 		<p>Avanti can provide your company with a total or partial refurbishment of your office space. Sometimes when a company relinquishes it's office space,the landlord will require it to be re-instated to how the premises looked prior to your occupance. In some circumstances they may try to charge exorbitant rates for the work. Avanti are experienced in this area and can carry out the work at a fraction of the cost. </p>
 	</div>
 	<div class="infoBox" id="decoration">
-		<h2>Decoration</h2>
-		<p>Avanti only use top quality painters and decorators.So you can be rest assured of a perfect finish to your specifications.  </p>
+		<h2>Decoration, Tape &amp; Jointing </h2>
+		<p>Avanti only use top quality painters and decorators.  </p>
 	</div>
 	<div class="infoBox" id="drylining">
 		<h2>Drylining</h2>
