--- a/landing_page/templates/other.html
+++ b/landing_page/templates/other.html
@@ -85,7 +85,7 @@
 	</div>
 	<div class="infoBox" id="decoration">
 		<h2>Decoration, Tape &amp; Jointing </h2>
-		<p>Avanti only use top quality painters and decorators.  </p>
+		<p>Avanti only use top quality painters and decorators as well as experienced tape and jointers. </p>
 	</div>
 	<div class="infoBox" id="drylining">
 		<h2>Drylining</h2>
