--- a/landing_page/templates/other.html
+++ b/landing_page/templates/other.html
@@ -70,10 +70,11 @@
 		<p>If you feel you are outgrowing your office or warehouse space, there is a cheaper option than moving. Installing a new mezzanine floor can almost double your floor area at minimal cost. Avanti can assist you in the lay-out and design of a mezzanine floor to suit your needs. A mezzanine floor can be installed in a matter of days.</p>
 	</div>
 	<div class="infoBox" id="plumbing">
-	<h2>Plumbing</h2>
+	<h2>Heating &amp Air-conditioning</h2>
 	<p>Avanti will provide a heating and plumbing service to meet your requirements.
 		It maybe a kitchen, Toilets or heating. Our heating and Plumbing engineers are
-		experienced, qualified tradesmen. We pride ourselves on expert work.</p>
+		experienced, qualified tradesmen. We pride ourselves on expert work. We can also 
+		provide you with air-conditioning that can double-up as heating.</p>
 	</div>
 	<div class="infoBox" id="electrics">
 		<h2>Electrics and Data</h2>
