--- a/landing_page/templates/header.html
+++ b/landing_page/templates/header.html
@@ -8,9 +8,15 @@
 <ul>
   <li id="partitioning"><a href="partitioning">Office Partitioning</a></li>
   <li id="ceilings"><a href="ceilings">Suspended Ceilings</a></li>
-  <li id="other"><a href="other">Other Services</a></li>
+  <li id="mezzanine"><a href="mezzanine">Mezzanine Floors</a></li>
 </ul>
 <ul id="column2">
-  	<li id="endorsements"><a href="endorsements">Endorsements</a></li>
+  	<li id="heating"><a href="heating">Heating &amp Air-Conditioning</a></li>
+  	<li id="office"><a href="office">Office Refurbishment</a></li>
+  	<li id="drylining"><a href="drylining">Drylining</a></li>
+</ul>
+<ul id="column3">
+	<li id="decoration"><a href="decoration">Decoration, Tape &amp; Jointing</a></li>
+	<li id="electrics"><a href="electrics">Electrics &amp Data</a></li>
 </ul>
 </header>
