--- a/Roland/static/css/header.css
+++ b/Roland/static/css/header.css
@@ -106,6 +106,9 @@
       right:20px;
       z-index:1;
     }
-    ul#column2, ul#column3  {
+    ul#column2  {
       margin-left:150px;
+    }
+    ul#column3 {
+      margin-left:300px;
     }
