Updated Mezzanine floors page name

--- a/landing_page/templates/mezzanine.html
+++ b/landing_page/templates/mezzanine.html
@@ -16,7 +16,7 @@
 		document.getElementById('mezzanine').id = "active";
 	</script>
 	<div id="infoBox1" class="infoBox">
-		<h2>Mezzanine</h2>
+		<h2>Mezzanine Floors</h2>
 		<p>
 		If you feel you are outgrowing your office or warehouse space, there is a cheaper option than moving. Installing a new mezzanine floor can almost double your floor area at minimal cost. Avanti can assist you in the lay-out and design of a mezzanine floor to suit your needs.<br>
 		<br> A mezzanine floor can be installed in a matter of days.
