--- a/landing_page/templates/ceilings.html
+++ b/landing_page/templates/ceilings.html
@@ -24,7 +24,7 @@
 		There are solutions we can offer you. So why not drop us an email?
 		</p>
 	</div>
-	<img id="image1" src="{% static 'images/82265.jpg' %}">
+	<img id="image1" src="{% static 'images/ceiling.jpg' %}">
 	</div>
 	<footer>
     	<p>Avanti Interiors &copy; 2014</p>
