--- a/landing_page/templates/partitioning.html
+++ b/landing_page/templates/partitioning.html
@@ -27,7 +27,7 @@
 		No matter the size or type of office we can fit it. We work with you to find the best possible solution for your office needs.
 		</p>
 	</div>
-	<img id="image1" src="{% static 'images/1.jpg' %}">
+	<img id="image1" src="{% static 'images/partitioning.jpg' %}">
 	</div>
 	<footer>
     	<p>Avanti Interiors &copy; 2014</p>
