--- a/landing_page/templates/decoration.html
+++ b/landing_page/templates/decoration.html
@@ -21,7 +21,7 @@
 			Avanti only use top quality painters and decorators as well as experienced tape and jointers.
 		</p>
 	</div>
-	<img id="image1" src="{% static 'images/82265.jpg' %}">
+	<img id="image1" src="{% static 'images/decoration.jpg' %}">
 	</div>
 	<footer>
     	<p>Avanti Interiors &copy; 2014</p>
