--- a/landing_page/templates/drylining.html
+++ b/landing_page/templates/drylining.html
@@ -21,7 +21,7 @@
 			Drylining is a cheap and efficient way to partition off a room area to create new spaces for whatever your requirements are.
 		</p>
 	</div>
-	<img id="image1" src="{% static 'images/82265.jpg' %}">
+	<img id="image1" src="{% static 'images/dryliningjpg' %}">
 	</div>
 	<footer>
     	<p>Avanti Interiors &copy; 2014</p>
