--- a/landing_page/templates/mezzanine.html
+++ b/landing_page/templates/mezzanine.html
@@ -22,7 +22,7 @@
 		<br> A mezzanine floor can be installed in a matter of days.
 		</p>
 	</div>
-	<img id="image1" src="{% static 'images/82265.jpg' %}">
+	<img id="image1" src="{% static 'images/mezzanine.jpg' %}">
 	</div>
 	<footer>
     	<p>Avanti Interiors &copy; 2014</p>
