update ceilings page

--- a/landing_page/templates/ceilings.html
+++ b/landing_page/templates/ceilings.html
@@ -16,7 +16,7 @@
 		document.getElementById('ceilings').id = "active";
 	</script>
 	<div id="infoBox1" class="infoBox">
-		<h2>Ceilings</h2>
+		<h2>Suspended Ceilings</h2>
 		<p>
 		At Avanti we will install ceilings tailored to your needs. We work with you to ensure you get what you want.
 		Our ceilings are professionally installed by tradesmen with years of experience.<br>
