--- a/landing_page/templates/electrics.html
+++ b/landing_page/templates/electrics.html
@@ -21,7 +21,7 @@
 			Avanti can provide you with all your electrical and data needs, be it lighting,sockets, fire alarms to a new updated switchboard if necessary. Our electrical contractors are all qualified British tradesmen who are NICEIC, MCS and ECA approved.
 		</p>
 	</div>
-	<img id="image1" src="{% static 'images/82265.jpg' %}">
+	<img id="image1" src="{% static 'images/electrics.jpg' %}">
 	</div>
 	<footer>
     	<p>Avanti Interiors &copy; 2014</p>
