Google domain verification

--- a/landing_page/templates/index.html
+++ b/landing_page/templates/index.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <HTML>
 	<head>
+		<meta name="google-site-verification" content="ylAvnYvygiE_ekxsMajuOZ0KWu_X0jCrpsrUgkxnQQw" />
 		<link href='http://fonts.googleapis.com/css?family=Arimo:700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link href="{% static 'css/header.css'%}" rel='stylesheet' type='text/css'>
