Updated contact info

--- a/landing_page/templates/header.html
+++ b/landing_page/templates/header.html
@@ -2,7 +2,7 @@
 	<h1><a href="/">Avanti Interiors</a></h1>
 	<p>
 		Roland Crayton: 07738 628255<br>
-		Tom Blake: 07572452100<br>
+		Email: roland@Avantiinteriors.co.uk<br>
 	</p>
 <ul>
   <li id="partitioning"><a href="partitioning">Office Partitioning</a></li>
